# vprogs

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  README.md  cargo-check-all.sh  cargo-fmt-all.sh  cargo-udeps-all.sh  format-code.sh  issue.md  reintegration-plan.md  rustfmt.toml  spec.md
core/atomics/: Cargo.toml
core/atomics/src/: async_queue.rs  atomic_async_latch.rs  atomic_ring.rs  lib.rs  wait_cell.rs
core/atomics/tests/: wait_cell.rs
core/crypto/: Cargo.toml
core/crypto/src/: lib.rs
core/crypto/src/hashing/: hasher.rs
core/crypto/src/smt/: bits.rs  key.rs  (+17 more)
core/crypto/tests/: hasher.rs  node.rs  node_data.rs  versioned_tree.rs
core/smt/: Cargo.toml
core/smt/src/: commitment.rs  empty_hash.rs  hashed_node.rs  key.rs  lib.rs  node.rs  stale_node.rs  tree.rs  updater.rs  write_batch.rs
core/smt/tests/: delete_with_promotion.rs  e2e.rs  hasher.rs  node.rs  non_inclusion_shortcut.rs  versioned_tree.rs
core/types/: Cargo.toml
core/types/src/: access.rs  access_metadata.rs  access_type.rs  batch_metadata.rs  canonical_chain.rs  chain_sink.rs  checkpoint.rs  l2_transaction.rs  lib.rs  no_op_canonical_chain.rs  resource_id.rs  scheduler_transaction.rs
examples/tn10-flow/: Cargo.toml  SETTLEMENT_RESUME_TODO.md
examples/tn10-flow/scripts/: README.md  monitor.sh  run-demo.sh
examples/tn10-flow/src/: bootstrap.rs  config.rs  daemon.rs  lib.rs  main.rs  params.rs  persistence.rs  settler.rs  state_read.rs
examples/tn10-flow/tests/: two_provers_contend.rs
examples/tn10-runtime/: Cargo.toml
examples/tn10-runtime/scripts/: .gitignore  README.md  monitor.sh  run-demo.sh
examples/tn10-runtime/src/: actions.rs  config.rs  deposit.rs  lib.rs  main.rs
examples/tn10-runtime/tests/: runtime_actions.rs
l1/bridge/: Cargo.toml
l1/bridge/src/: bridge.rs  chain_block.rs  command.rs  config.rs  error.rs  event.rs  lib.rs  virtual_chain.rs  worker.rs
l1/bridge/tests/: integration.rs  malformed_response.rs  wire_panic_repro.rs
l1/types/: Cargo.toml
l1/types/src/: block_hash.rs  chain_block_metadata.rs  connect_strategy.rs  hash.rs  l1_transaction.rs  l1_transaction_covenant_ext.rs  l1_transaction_ext.rs  lib.rs  network_id.rs  network_type.rs  settlement_info.rs  transaction_id.rs  tx_hashing.rs
l1/wallet/: Cargo.toml
l1/wallet/src/: build.rs  lib.rs
node/chain-state/: Cargo.toml
node/chain-state/src/: block_state.rs  chain_state.rs  config.rs  content_entry.rs  content_ring_buffer.rs  coordinate.rs  header_entry.rs  lib.rs
node/cli/: Cargo.toml
node/cli/src/: backend.rs  cli_provider.rs  execution_params.rs  extensions.rs  l1_bridge_params.rs  main.rs  params.rs  storage_params.rs
node/framework/: Cargo.toml
node/framework/src/: api.rs  batch.rs  config.rs  error.rs  lib.rs  metadata.rs  node.rs  prepared_batch.rs  processor.rs  vm.rs  worker.rs
node/framework/tests/: e2e.rs
node/l1-bridge/: Cargo.toml
node/l1-bridge/src/: bridge.rs  chain_block.rs  chain_block_metadata.rs  chain_state.rs  config.rs  coordinate.rs  error.rs  event.rs  event_queue.rs  kaspa_rpc_client_ext.rs  lib.rs  reorg_filter.rs  state.rs  sync.rs  virtual_chain.rs  worker.rs
node/l1-bridge/tests/: integration.rs
node/l2-bridge/: Cargo.toml
node/l2-bridge/src/: bridge.rs  config.rs  error.rs  event.rs  event_queue.rs  lib.rs  state.rs  sync.rs
node/l2-bridge/tests/: integration.rs
node/test-suite/: Cargo.toml
node/test-suite/src/: event_queue_ext.rs  l1_bridge_ext.rs  l1_node.rs  lib.rs  node_ext.rs  simnet_network.rs  simnet_node.rs  vm.rs
node/vm/: Cargo.toml
node/vm/src/: lib.rs
node/zk-vm/: Cargo.toml
node/zk-vm/src/: effects_recorder.rs  lib.rs  smt_manager.rs  witness.rs
runner/: Cargo.toml
runner/src/: config.rs  lane.rs  lib.rs  main.rs  node.rs  persistence.rs  report.rs  start.rs  wrpc.rs
runner/tests/: two_provers_contend.rs
scheduling/canonical-chain/: Cargo.toml
scheduling/canonical-chain/src/: lib.rs  lock_free_canonical_chain.rs
scheduling/execution-workers/: Cargo.toml
scheduling/execution-workers/src/: execution_workers.rs  worker.rs  workers_api.rs
scheduling/scheduler/: Cargo.toml
scheduling/scheduler/src/: access_handle.rs  batch_execution_context.rs  batch_lifecycle_worker.rs  batch_worker.rs  cancellation_context.rs  config.rs  context.rs  cpu_task.rs  error.rs  lib.rs  processing_context.rs  processor.rs  pruning_worker.rs  pruning_worker_loop.rs  receipt_store.rs  resource.rs  resource_access.rs  rollback.rs  runtime_batch.rs  runtime_context.rs  runtime_tx.rs  scheduled_batch.rs  scheduled_bundle.rs  scheduled_transaction.rs  scheduler.rs  scheduler_context.rs  state.rs  state_diff.rs  storage_cmd.rs  storage_ext.rs  transaction_context.rs  transaction_processor.rs  vm_interface.rs
scheduling/scheduler/tests/: e2e.rs  proof_receipt_cache.rs
scheduling/test-suite/: Cargo.toml
scheduling/test-suite/src/: access.rs  batch_metadata.rs  framework.rs  helpers.rs  lib.rs  processor.rs  scheduler_ext.rs  store_ext.rs  transaction.rs  tx.rs  vm.rs
scheduling/test-suite/tests/: e2e.rs
scheduling/test-utils/: Cargo.toml
scheduling/test-utils/src/: processor.rs  scheduler_ext.rs
sim/: Cargo.toml
sim/src/: config.rs  driver.rs  l2_miner.rs  lane_source.rs  lib.rs  network.rs
sim/src/driver/: config.rs  l2_driver.rs  stats.rs
sim/tests/: l2_flow.rs  smoke.rs
state/proof-receipt/: Cargo.toml
state/proof-receipt/src/: key.rs  lib.rs  prune.rs
state/proof-receipt/tests/: roundtrip.rs
state/smt/: Cargo.toml
state/smt/src/: blake3_hasher.rs  commit.rs  lib.rs  metadata.rs  multi_proof.rs  node_key.rs  rocksdb_store.rs  stale_node.rs  tree_store.rs  tree_update_batch.rs  versioned_tree.rs
state/smt/tests/: hasher.rs  node_data.rs  versioned_tree.rs
state/version/: Cargo.toml
state/version/src/: lib.rs
storage/rocksdb-store/: Cargo.toml
storage/rocksdb-store/src/: config.rs  key_ext.rs  lib.rs  stale_node_ext.rs  state_space_ext.rs  store.rs  write_batch.rs
storage/types/: Cargo.toml
storage/types/src/: lib.rs  read_store.rs  state_space.rs  store.rs  write_batch.rs
(+593 files in other folders)
