[workspace]
default-members = [
  "core/*",
  "l1/*",
  "node/*",
  "scheduling/*",
  "state/*",
  "storage/*",
  "transaction-runtime/*",
  "zk/abi",
  "zk/covenant",
  "zk/transaction-prover",
  "zk/batch-prover",
  "zk/vm",
  "zk/backend/risc0/api",
  "zk/backend/risc0/test-suite",
]
exclude = [
  "zk/backend/risc0/transaction-processor",
  "zk/backend/risc0/batch-processor",
]
members = [
  "core/*",
  "l1/*",
  "node/*",
  "scheduling/*",
  "state/*",
  "storage/*",
  "transaction-runtime/*",
  "zk/abi",
  "zk/covenant",
  "zk/transaction-prover",
  "zk/batch-prover",
  "zk/vm",
  "zk/backend/risc0/api",
  "zk/backend/risc0/test-suite",
]
resolver = "3"

  [workspace.package]
  edition = "2021"
  version = "0.1.0"

  [workspace.dependencies]
  # External dependencies
  arc-swap = "1.7"
  borsh = { version = "1.6.0", default-features = false, features = ["derive"] }
  clap = { version = "4", features = ["derive"] }
  crossbeam-deque = "0.8.6"
  crossbeam-queue = "0.3.12"
  crossbeam-utils = "0.8.21"
  ctrlc = { version = "3", features = ["termination"] }
  env_logger = "0.11"
  fastrand = "2.3.0"
  figment = { version = "0.10", features = ["toml", "env"] }
  futures = "0.3.31"
  intrusive-collections = "0.9.7"
  log = "0.4"
  num_cpus = "1.17.0"
  proc-macro2 = "1.0.103"
  quote = "1.0.42"
  rocksdb = { version = "0.24.0", default-features = false, features = [
    "lz4",
    "zstd",
    "snappy",
    "zlib",
    "bzip2",
    "jemalloc",
    "mt_static",
  ] }
  serde = { version = "1", features = ["derive"] }
  serde_json = "1"
  syn = { version = "2.0.111", features = ["full"] }
  tap = "1.0.1"
  tempfile = "3.23.0"
  thiserror = { version = "2", default-features = false }
  tokio = { version = "1", features = ["rt", "sync"] }
  tokio-util = "0.7.17"
  toml = "0.8"
  workflow-core = "0.18.0"

  secp256k1 = { version = "0.29.1", features = ["rand-std"] }

  # ZK dependencies
  blake3 = { version = "1", default-features = false }
  risc0-zkvm = { version = "3.0", default-features = false }
  rkyv = { version = "0.8", default-features = false, features = [
    "alloc",
    "bytecheck",
  ] }

  # Kaspa dependencies
  kaspa-addresses           = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-consensus-core      = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-core                = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-grpc-client         = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-hashes              = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2", default-features = false }
  kaspa-merkle              = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-notify              = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-rpc-core            = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-seq-commit          = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2", default-features = false }
  kaspa-smt                 = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2", default-features = false }
  kaspa-testing-integration = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-txscript            = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-wrpc-client         = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspa-wrpc-server         = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }
  kaspad                    = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "covpp-reset2" }

  # Internal dependencies
  vprogs-core-atomics                             = { path = "core/atomics" }
  vprogs-core-codec                               = { path = "core/codec" }
  vprogs-core-macros                              = { path = "core/macros" }
  vprogs-core-smt                                 = { path = "core/smt" }
  vprogs-core-test-utils                          = { path = "core/test-utils" }
  vprogs-core-types                               = { path = "core/types", default-features = false }
  vprogs-l1-bridge                                = { path = "l1/bridge" }
  vprogs-l1-types                                 = { path = "l1/types" }
  vprogs-l1-utils                                 = { path = "l1/utils" }
  vprogs-node-cli                                 = { path = "node/cli" }
  vprogs-node-framework                           = { path = "node/framework" }
  vprogs-node-test-utils                          = { path = "node/test-utils" }
  vprogs-node-vm                                  = { path = "node/vm" }
  vprogs-scheduling-execution-workers             = { path = "scheduling/execution-workers" }
  vprogs-scheduling-scheduler                     = { path = "scheduling/scheduler" }
  vprogs-scheduling-test-utils                    = { path = "scheduling/test-utils" }
  vprogs-state-batch-metadata                     = { path = "state/batch-metadata" }
  vprogs-state-metadata                           = { path = "state/metadata" }
  vprogs-state-ptr-latest                         = { path = "state/ptr-latest" }
  vprogs-state-ptr-rollback                       = { path = "state/ptr-rollback" }
  vprogs-state-version                            = { path = "state/version" }
  vprogs-storage-manager                          = { path = "storage/manager" }
  vprogs-storage-rocksdb-store                    = { path = "storage/rocksdb-store" }
  vprogs-storage-types                            = { path = "storage/types" }
  vprogs-transaction-runtime                      = { path = "transaction-runtime/transaction-runtime" }
  vprogs-transaction-runtime-address              = { path = "transaction-runtime/address" }
  vprogs-transaction-runtime-auth-context         = { path = "transaction-runtime/auth-context" }
  vprogs-transaction-runtime-authenticated-data   = { path = "transaction-runtime/authenticated-data" }
  vprogs-transaction-runtime-builtin-capabilities = { path = "transaction-runtime/builtin-capabilities" }
  vprogs-transaction-runtime-data                 = { path = "transaction-runtime/data" }
  vprogs-transaction-runtime-data-context         = { path = "transaction-runtime/data-context" }
  vprogs-transaction-runtime-error                = { path = "transaction-runtime/error" }
  vprogs-transaction-runtime-instruction          = { path = "transaction-runtime/instruction" }
  vprogs-transaction-runtime-lock                 = { path = "transaction-runtime/lock" }
  vprogs-transaction-runtime-object-id            = { path = "transaction-runtime/object-id" }
  vprogs-transaction-runtime-program              = { path = "transaction-runtime/program" }
  vprogs-transaction-runtime-program-arg          = { path = "transaction-runtime/program-arg" }
  vprogs-transaction-runtime-program-context      = { path = "transaction-runtime/program-context" }
  vprogs-transaction-runtime-program-type         = { path = "transaction-runtime/program-type" }
  vprogs-transaction-runtime-pubkey               = { path = "transaction-runtime/pubkey" }
  vprogs-transaction-runtime-signature-lock       = { path = "transaction-runtime/signature-lock" }
  vprogs-transaction-runtime-transaction          = { path = "transaction-runtime/transaction" }
  vprogs-transaction-runtime-transaction-effects  = { path = "transaction-runtime/transaction-effects" }
  vprogs-zk-abi                                   = { path = "zk/abi", default-features = false }
  vprogs-zk-backend-risc0-api                     = { path = "zk/backend/risc0/api", default-features = false }
  vprogs-zk-batch-prover                          = { path = "zk/batch-prover" }
  vprogs-zk-covenant                              = { path = "zk/covenant" }
  vprogs-zk-transaction-prover                    = { path = "zk/transaction-prover" }
  vprogs-zk-vm                                    = { path = "zk/vm" }

[patch.crates-io]
serde_nested_with = { git = "https://github.com/murar8/serde_nested_with", tag = "0.2.6" }

# Redirect kaspa deps to the local fork while we iterate on the lane_data v2 extension.
# Switch back to the git dep declarations above once the PR lands upstream.
[patch."https://github.com/kaspanet/rusty-kaspa"]
kaspa-addresses           = { path = "../rusty-kaspa-covpp-reset2/crypto/addresses" }
kaspa-consensus-core      = { path = "../rusty-kaspa-covpp-reset2/consensus/core" }
kaspa-core                = { path = "../rusty-kaspa-covpp-reset2/core" }
kaspa-grpc-client         = { path = "../rusty-kaspa-covpp-reset2/rpc/grpc/client" }
kaspa-hashes              = { path = "../rusty-kaspa-covpp-reset2/crypto/hashes" }
kaspa-merkle              = { path = "../rusty-kaspa-covpp-reset2/crypto/merkle" }
kaspa-notify              = { path = "../rusty-kaspa-covpp-reset2/notify" }
kaspa-rpc-core            = { path = "../rusty-kaspa-covpp-reset2/rpc/core" }
kaspa-seq-commit          = { path = "../rusty-kaspa-covpp-reset2/consensus/seq-commit" }
kaspa-smt                 = { path = "../rusty-kaspa-covpp-reset2/crypto/smt" }
kaspa-testing-integration = { path = "../rusty-kaspa-covpp-reset2/testing/integration" }
kaspa-txscript            = { path = "../rusty-kaspa-covpp-reset2/crypto/txscript" }
kaspa-wrpc-client         = { path = "../rusty-kaspa-covpp-reset2/rpc/wrpc/client" }
kaspa-wrpc-server         = { path = "../rusty-kaspa-covpp-reset2/rpc/wrpc/server" }
kaspad                    = { path = "../rusty-kaspa-covpp-reset2/kaspad" }
