[workspace]
default-members = [
  "core/*",
  "examples/tn10-flow",
  "l1/*",
  "node/*",
  "runner",
  "scheduling/*",
  "sim",
  "state/*",
  "storage/*",
  "transaction-runtime/*",
  "zk/abi",
  "zk/transaction-prover",
  "zk/batch-prover",
  "zk/aggregate-prover",
  "zk/vm",
  "zk/backend/risc0/api",
  "zk/backend/risc0/covenant",
  "zk/backend/risc0/settler",
  "zk/backend/risc0/test-suite",
]
exclude = [
  "zk/backend/risc0/transaction-processor",
  "zk/backend/risc0/transaction-processor-with-exits",
  "zk/backend/risc0/batch-processor",
  "zk/backend/risc0/batch-aggregator",
  "zk/backend/risc0/runtime-processor",
]
members = [
  "core/*",
  "examples/tn10-flow",
  "l1/*",
  "node/*",
  "runner",
  "scheduling/*",
  "sim",
  "state/*",
  "storage/*",
  "transaction-runtime/*",
  "zk/abi",
  "zk/backend/risc0/api",
  "zk/backend/risc0/covenant",
  "zk/backend/risc0/settler",
  "zk/backend/risc0/test-suite",
  "zk/aggregate-prover",
  "zk/batch-prover",
  "zk/transaction-prover",
  "zk/vm",
]
resolver = "3"

  [workspace.package]
  edition = "2021"
  version = "0.1.0"

  [workspace.dependencies]
  # External dependencies
  arc-swap              = "1.7"
  borsh                 = { version = "1.6.0", default-features = false, features = ["derive"] }
  clap                  = { version = "4", features = ["derive"] }
  crossbeam-deque       = "0.8.6"
  crossbeam-queue       = "0.3.12"
  crossbeam-utils       = "0.8.21"
  ctrlc                 = { version = "3", features = ["termination"] }
  env_logger            = "0.11"
  faster-hex            = "0.9"
  fastrand              = "2.3.0"
  figment               = { version = "0.10", features = ["toml", "env"] }
  futures               = "0.3.31"
  indexmap              = "2"
  intrusive-collections = "0.9.7"
  log                   = "0.4"
  num_cpus              = "1.17.0"
  pin-project-lite      = "0.2"
  proc-macro2           = "1.0.103"
  quote                 = "1.0.42"
  rand                  = "0.8"
  rand_distr            = "0.4"
  secp256k1             = { version = "0.29.1", features = ["rand-std"] }
  serde                 = { version = "1", features = ["derive"] }
  serde_json            = "1"
  syn                   = { version = "2.0.111", features = ["full"] }
  tap                   = "1.0.1"
  tempfile              = "3.23.0"
  thiserror             = { version = "2", default-features = false }
  tokio                 = { version = "1", features = ["rt", "sync"] }
  tokio-util            = "0.7.17"
  toml                  = "0.8"
  workflow-core         = "0.18.0"
  zerocopy              = { version = "0.8", default-features = false }
  # jemalloc is intentionally omitted here: it does not build on Windows, so it is enabled
  # per-target in storage/rocksdb-store and propagated to the build via Cargo feature unification.
  rocksdb = { version = "0.24.0", default-features = false, features = [
    "lz4",
    "zstd",
    "snappy",
    "zlib",
    "bzip2",
    "mt_static",
  ] }

  # ZK dependencies
  ark-bn254 = "0.6.0"
  ark-groth16 = "0.6.0"
  ark-serialize = "0.6.0"
  bincode = { version = "1.3.3", default-features = false }
  blake2b_simd = { version = "1.0.2", default-features = false }
  blake3 = { version = "1", default-features = false }
  risc0-circuit-recursion = { version = "4.0", default-features = false }
  risc0-groth16 = "3.0.3"
  risc0-zkvm = { version = "3.0", default-features = false }
  rkyv = { version = "0.8", default-features = false, features = [
    "alloc",
    "bytecheck",
  ] }
  sha2 = { version = "0.10", default-features = false }

  # Kaspa dependencies — pinned to `kaspanet/rusty-kaspa` master (v2.0.x). Master now carries
  # `fix(rpc/vspcv2): covenant field was missing from tx outputs` (#1056), which populates the
  # per-output covenant binding (`RpcTransactionOutput.covenant`) on the wRPC v2 accepted-transactions
  # convert path the L2 bridge's settlement detection reads; the prior `covpp-reset2-rpc-lane-proof`
  # branch dropped it. Newer API revision than the old covpp pin, so the vprogs side carries a v2.0
  # API-drift port.
  kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-consensus = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-consensus-notify = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-database = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-grpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-hashes = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master", default-features = false, features = [
    "zerocopy",
  ] }
  kaspa-merkle = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-notify = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-rpc-core = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-seq-commit = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master", default-features = false }
  kaspa-smt = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master", default-features = false }
  kaspa-testing-integration = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-utils = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-wrpc-client = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspa-wrpc-server = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  kaspad = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }
  simpa = { git = "https://github.com/kaspanet/rusty-kaspa", branch = "master" }

  # Internal dependencies
  vprogs-core-atomics                             = { path = "core/atomics" }
  vprogs-core-codec                               = { path = "core/codec" }
  vprogs-core-hashing                             = { path = "core/hashing" }
  vprogs-core-macros                              = { path = "core/macros" }
  vprogs-core-merkle-tree                         = { path = "core/merkle-tree" }
  vprogs-core-smt                                 = { path = "core/smt" }
  vprogs-core-test-utils                          = { path = "core/test-utils" }
  vprogs-core-types                               = { path = "core/types", default-features = false }
  vprogs-l1-bridge                                = { path = "l1/bridge" }
  vprogs-l1-types                                 = { path = "l1/types" }
  vprogs-l1-utils                                 = { path = "l1/utils" }
  vprogs-l1-wallet                                = { path = "l1/wallet" }
  vprogs-node-cli                                 = { path = "node/cli" }
  vprogs-node-framework                           = { path = "node/framework" }
  vprogs-node-test-utils                          = { path = "node/test-utils" }
  vprogs-node-vm                                  = { path = "node/vm" }
  vprogs-scheduling-execution-workers             = { path = "scheduling/execution-workers" }
  vprogs-scheduling-scheduler                     = { path = "scheduling/scheduler" }
  vprogs-scheduling-test-utils                    = { path = "scheduling/test-utils" }
  vprogs-state-batch-metadata                     = { path = "state/batch-metadata" }
  vprogs-state-metadata                           = { path = "state/metadata" }
  vprogs-state-proof-receipt                      = { path = "state/proof-receipt" }
  vprogs-state-ptr-latest                         = { path = "state/ptr-latest" }
  vprogs-state-ptr-rollback                       = { path = "state/ptr-rollback" }
  vprogs-state-version                            = { path = "state/version" }
  vprogs-storage-canonical-chain                  = { path = "storage/canonical-chain" }
  vprogs-storage-manager                          = { path = "storage/manager" }
  vprogs-storage-rocksdb-store                    = { path = "storage/rocksdb-store" }
  vprogs-storage-types                            = { path = "storage/types" }
  vprogs-transaction-runtime                      = { path = "transaction-runtime/transaction-runtime" }
  vprogs-transaction-runtime-address              = { path = "transaction-runtime/address" }
  vprogs-transaction-runtime-auth-context         = { path = "transaction-runtime/auth-context" }
  vprogs-transaction-runtime-authenticated-data   = { path = "transaction-runtime/authenticated-data" }
  vprogs-transaction-runtime-builtin-capabilities = { path = "transaction-runtime/builtin-capabilities" }
  vprogs-transaction-runtime-data                 = { path = "transaction-runtime/data" }
  vprogs-transaction-runtime-data-context         = { path = "transaction-runtime/data-context" }
  vprogs-transaction-runtime-error                = { path = "transaction-runtime/error" }
  vprogs-transaction-runtime-instruction          = { path = "transaction-runtime/instruction" }
  vprogs-transaction-runtime-lock                 = { path = "transaction-runtime/lock" }
  vprogs-transaction-runtime-object-id            = { path = "transaction-runtime/object-id" }
  vprogs-transaction-runtime-program              = { path = "transaction-runtime/program" }
  vprogs-transaction-runtime-program-arg          = { path = "transaction-runtime/program-arg" }
  vprogs-transaction-runtime-program-context      = { path = "transaction-runtime/program-context" }
  vprogs-transaction-runtime-program-type         = { path = "transaction-runtime/program-type" }
  vprogs-transaction-runtime-pubkey               = { path = "transaction-runtime/pubkey" }
  vprogs-transaction-runtime-signature-lock       = { path = "transaction-runtime/signature-lock" }
  vprogs-transaction-runtime-transaction          = { path = "transaction-runtime/transaction" }
  vprogs-transaction-runtime-transaction-effects  = { path = "transaction-runtime/transaction-effects" }
  vprogs-zk-abi                                   = { path = "zk/abi", default-features = false }
  vprogs-zk-aggregate-prover                      = { path = "zk/aggregate-prover" }
  vprogs-zk-backend-risc0-api                     = { path = "zk/backend/risc0/api", default-features = false }
  vprogs-zk-backend-risc0-covenant                = { path = "zk/backend/risc0/covenant" }
  vprogs-zk-backend-risc0-settler                 = { path = "zk/backend/risc0/settler" }
  vprogs-zk-backend-risc0-test-suite              = { path = "zk/backend/risc0/test-suite" }
  vprogs-zk-batch-prover                          = { path = "zk/batch-prover" }
  vprogs-zk-transaction-prover                    = { path = "zk/transaction-prover" }
  vprogs-zk-vm                                    = { path = "zk/vm" }
