[package]
edition = "2021"
name    = "vprogs-runner"
publish = false
version = "0.1.0"

# Reusable daemon engine (library) + the `vprun` CLI binary that drives it.
[lib]
name = "vprogs_runner"
path = "src/lib.rs"

[[bin]]
name = "vprun"
path = "src/main.rs"

[features]
# `cuda` swaps the RISC0 prover for the GPU one. The proving + settlement path compiles and runs end
# to end without it (CPU/dev stub proofs), but the on-chain `OpZkPrecompile` only accepts real
# receipts, so meaningful settlements happen only under `cuda` without `RISC0_DEV_MODE`.
cuda = ["vprogs-zk-backend-risc0-api/cuda"]
# Pulls in the settler's alternation pacer used by the two-prover contention acceptance test. Off in
# normal builds, so the runner's settlement config carries no alternation field.
test-utils = ["vprogs-zk-backend-risc0-settler/test-utils"]

[dependencies]
# vprogs internal: the node/bridge/scheduler wiring, the proving stack, covenant bootstrap, and the
# ELF loaders + dev-mode probe are reused rather than reimplemented.
vprogs-core-atomics                = { workspace = true }
vprogs-core-smt                    = { workspace = true }
vprogs-l1-bridge                   = { workspace = true }
vprogs-l1-types                    = { workspace = true }
vprogs-l1-wallet                   = { workspace = true }
vprogs-node-framework              = { workspace = true }
vprogs-scheduling-scheduler        = { workspace = true }
vprogs-storage-manager             = { workspace = true }
vprogs-storage-rocksdb-store       = { workspace = true }
vprogs-zk-aggregate-prover         = { workspace = true }
vprogs-zk-backend-risc0-api        = { workspace = true, features = ["host"] }
vprogs-zk-backend-risc0-settler    = { workspace = true }
vprogs-zk-backend-risc0-test-suite = { workspace = true }
vprogs-zk-batch-prover             = { workspace = true }
vprogs-zk-vm                       = { workspace = true }

# kaspa (same fork pins as the rest of the workspace)
kaspa-consensus-core = { workspace = true }
kaspa-core           = { workspace = true }
kaspa-hashes         = { workspace = true }
kaspa-rpc-core       = { workspace = true }
kaspa-seq-commit     = { workspace = true }
kaspa-wrpc-client    = { workspace = true }

# external
clap       = { workspace = true }
ctrlc      = { workspace = true }
fastrand   = { workspace = true }
figment    = { workspace = true }
log        = { workspace = true }
secp256k1  = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
tokio      = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }

# The two-prover contention test needs the settler's alternation knob, so it only builds with
# `--features test-utils`; a plain `cargo test` skips it.
[[test]]
name              = "two_provers_contend"
required-features = ["test-utils"]

[dev-dependencies]
# `figment`'s `Jail` (config-layering precedence tests) is gated behind its `test` feature.
figment = { workspace = true, features = ["test"] }

# The two-prover contention integration test drives an in-process simnet L1 and wires the proving +
# settlement stack directly, so it depends on every crate it imports by name (integration tests see
# only the public API plus dev-deps). Crates already in `[dependencies]` are re-declared here so the
# test's extern prelude resolves them regardless; Cargo dedups.
kaspa-addresses = { workspace = true }
kaspa-consensus-core = { workspace = true }
kaspa-hashes = { workspace = true }
kaspa-rpc-core = { workspace = true }
kaspa-txscript = { workspace = true }
kaspa-wrpc-client = { workspace = true }
secp256k1 = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = [
  "rt-multi-thread",
  "macros",
  "time",
  "sync",
] }
vprogs-core-atomics = { workspace = true }
vprogs-core-smt = { workspace = true }
vprogs-core-test-utils = { workspace = true }
vprogs-core-types = { workspace = true }
vprogs-l1-types = { workspace = true }
vprogs-l1-wallet = { workspace = true }
vprogs-node-test-utils = { workspace = true }
# Do NOT enable the settler's `test-utils` here: a dev-dep feature is unified into every dev/test
# build, which would activate the settler's `alternation` field while the runner's own `test-utils`
# gate (in `start.rs`) stays off, breaking `cargo test --lib`. The runner's `test-utils` feature
# forwards to the settler's, so the `[[test]]` (required-features = ["test-utils"]) gets it there.
vprogs-zk-backend-risc0-api        = { workspace = true, features = ["host"] }
vprogs-zk-backend-risc0-settler    = { workspace = true }
vprogs-zk-backend-risc0-test-suite = { workspace = true }
