[package]
edition.workspace = true
name              = "vprogs-core-atomics"
version.workspace = true

[dependencies]
crossbeam-queue.workspace    = true
futures.workspace            = true
tokio                        = { workspace = true, features = ["sync"] }
tokio-util.workspace         = true
vprogs-core-macros.workspace = true
