[package]
edition.workspace = true
name              = "vprogs-core-crypto"
version.workspace = true

[features]
default = ["std"]
host    = ["std", "dep:vprogs-storage-types"]
std     = []

[dependencies]
blake3               = { workspace = true }
vprogs-storage-types = { workspace = true, optional = true }

[dev-dependencies]
blake3                       = "1"
tempfile.workspace           = true
vprogs-state-smt             = { workspace = true }
vprogs-storage-rocksdb-store = { workspace = true }
vprogs-storage-types         = { workspace = true }
