[package]
edition.workspace = true
name              = "vprogs-core-types"
version.workspace = true

[dependencies]
borsh             = { workspace = true, default-features = false }
rkyv              = { workspace = true, default-features = false }
vprogs-core-codec = { workspace = true }
zerocopy          = { workspace = true, features = ["derive"] }
